[gd_scene load_steps=5 format=3 uid="uid://c0pb6w8kdpiv0"]

[ext_resource type="Script" uid="uid://c6lkhnmhpk7fi" path="res://scripts/workday_new/character_event_card_fixed.gd" id="1_script"]
[ext_resource type="Texture2D" uid="uid://s2lat25m3p4f" path="res://assets/workday_new/ui/events/new.png" id="2_ejibc"]
[ext_resource type="FontFile" uid="uid://cdja3eosvd0mn" path="res://assets/font/LEEEAFHEI-REGULAR.TTF" id="2_ppt5y"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ppt5y"]
bg_color = Color(0.95, 0.95, 0.95, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.7, 0.7, 0.7, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="CharacterEventCard2" type="PanelContainer"]
custom_minimum_size = Vector2(350, 270)
offset_right = 420.0
offset_bottom = 283.0
theme_override_styles/panel = SubResource("StyleBoxFlat_ppt5y")
script = ExtResource("1_script")
region_height = 0.33
background_color = Color(0.95, 0.95, 0.95, 1)

[node name="CardContent" type="Control" parent="."]
layout_mode = 2

[node name="EventTitle" type="Label" parent="CardContent"]
layout_mode = 0
offset_left = 4.0
offset_top = 17.0
offset_right = 382.0
offset_bottom = 87.0
theme_override_colors/font_color = Color(0.152941, 0.180392, 0.231373, 1)
theme_override_fonts/font = ExtResource("2_ppt5y")
theme_override_font_sizes/font_size = 50
text = "事件标题"
clip_text = true
text_overrun_behavior = 3
max_lines_visible = 1

[node name="EventPerson" type="Label" parent="CardContent"]
layout_mode = 0
offset_left = 6.0
offset_top = 87.0
offset_right = 246.0
offset_bottom = 137.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_ppt5y")
theme_override_font_sizes/font_size = 50
text = "相关人物"
clip_text = true
text_overrun_behavior = 3
max_lines_visible = 1

[node name="StatusIcon" type="TextureRect" parent="CardContent"]
custom_minimum_size = Vector2(60, 28)
layout_mode = 0
offset_left = -12.0
offset_top = 186.0
offset_right = 162.0
offset_bottom = 258.0
texture = ExtResource("2_ejibc")
expand_mode = 1
stretch_mode = 5
